[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/game/source/3/toilets/halfHuffman_riddle.gd" type="Script" id=1]
[ext_resource path="res://themes/text30.tres" type="Theme" id=2]
[ext_resource path="res://assets/game/source/3/toilets/plus.png" type="Texture" id=3]
[ext_resource path="res://assets/game/source/3/toilets/fois.png" type="Texture" id=4]
[ext_resource path="res://assets/game/source/3/toilets/rond.png" type="Texture" id=5]
[ext_resource path="res://assets/game/source/3/toilets/carre.png" type="Texture" id=6]
[ext_resource path="res://assets/game/source/3/toilets/star.png" type="Texture" id=7]
[ext_resource path="res://scenes/game/riddleOverlay.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/game/source/3/toilets/halfHuffmanTree.png" type="Texture" id=9]
[ext_resource path="res://assets/game/source/3/toilets/halfHuffmanProba.png" type="Texture" id=10]
[ext_resource path="res://assets/game/source/3/toilets/bgFirstAid.png" type="Texture" id=11]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]

editor/display_folded = true
rect/min_size = Vector2( 800, 160 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1020.0
margin/top = 300.0
margin/right = 1896.0
margin/bottom = 466.0
alignment = 0

[node name="plus" type="Button" parent="Control/HBoxContainer"]

rect/min_size = Vector2( 160, 160 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 172.0
margin/bottom = 166.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 3 )
flat = false

[node name="fois" type="Button" parent="Control/HBoxContainer"]

rect/min_size = Vector2( 160, 160 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 176.0
margin/top = 0.0
margin/right = 348.0
margin/bottom = 166.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = false

[node name="rond" type="Button" parent="Control/HBoxContainer"]

rect/min_size = Vector2( 160, 160 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 352.0
margin/top = 0.0
margin/right = 524.0
margin/bottom = 166.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = false

[node name="diese" type="Button" parent="Control/HBoxContainer"]

rect/min_size = Vector2( 160, 160 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 528.0
margin/top = 0.0
margin/right = 700.0
margin/bottom = 166.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 6 )
flat = false

[node name="star" type="Button" parent="Control/HBoxContainer"]

rect/min_size = Vector2( 160, 160 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 704.0
margin/top = 0.0
margin/right = 876.0
margin/bottom = 166.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 7 )
flat = false

[node name="Panel" type="Panel" parent="Control"]

rect/min_size = Vector2( 756, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1020.0
margin/top = 500.0
margin/right = 1776.0
margin/bottom = 600.0

[node name="display" type="Label" parent="Control/Panel"]

rect/min_size = Vector2( 720, 80 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 10.0
margin/right = 740.0
margin/bottom = 90.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="binaryText" type="Label" parent="Control"]

rect/min_size = Vector2( 846, 100 )
rect/scale = Vector2( 1.4, 1.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1040.0
margin/top = 650.0
margin/right = 1886.0
margin/bottom = 750.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="deleteButton" type="Button" parent="Control"]

rect/min_size = Vector2( 100, 49 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1776.0
margin/top = 501.0
margin/right = 1926.0
margin/bottom = 550.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="validateButton" type="Button" parent="Control"]

rect/min_size = Vector2( 100, 49 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1776.0
margin/top = 550.0
margin/right = 1926.0
margin/bottom = 599.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="riddleOverlay" parent="." instance=ExtResource( 8 )]

[node name="tree" type="Sprite" parent="."]

transform/pos = Vector2( 500, 500 )
transform/scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="proba" type="Sprite" parent="."]

transform/pos = Vector2( 500, 850 )
texture = ExtResource( 10 )

[node name="bg" type="Sprite" parent="."]

transform/pos = Vector2( 967.545, 536.069 )
transform/scale = Vector2( 1.40637, 1.46352 )
z/z = -1
texture = ExtResource( 11 )

[connection signal="pressed" from="Control/HBoxContainer/plus" to="." method="_on_plus_pressed"]

[connection signal="pressed" from="Control/HBoxContainer/fois" to="." method="_on_fois_pressed"]

[connection signal="pressed" from="Control/HBoxContainer/rond" to="." method="_on_rond_pressed"]

[connection signal="pressed" from="Control/HBoxContainer/diese" to="." method="_on_diese_pressed"]

[connection signal="pressed" from="Control/HBoxContainer/star" to="." method="_on_star_pressed"]

[connection signal="pressed" from="Control/deleteButton" to="." method="_on_deleteButton_pressed"]

[connection signal="pressed" from="Control/validateButton" to="." method="_on_validateButton_pressed"]


